Ecommerce - cu produse si categorii

--- a/Curs3/Ecommerce/shop/templates/all_categories.html
+++ b/Curs3/Ecommerce/shop/templates/all_categories.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>all_categories</h1>
+    <ol>
+        {% for cat in categories  %}
+
+            <li>
+                {{cat.name}}
+            </li>
+
+        {% endfor %}
+    </ol>
 </body>
 </html>
