--- a/Curs4/Ecommerce/shop/templates/all_categories.html
+++ b/Curs4/Ecommerce/shop/templates/all_categories.html
@@ -11,7 +11,8 @@
         {% for cat in categories  %}
 
             <li>
-                {{cat.name}}
+            <a href="categories/{{cat.slug}}"> {{cat.name}}</a>
+               
             </li>
 
         {% endfor %}
