--- a/Curs4/Ecommerce/shop/templates/category_details.html
+++ b/Curs4/Ecommerce/shop/templates/category_details.html
@@ -6,6 +6,14 @@
     <title>category_details</title>
 </head>
 <body>
-    <h1>category_details</h1>
+
+    <h1>Categoria: {{category}} </h1>
+    <ol>
+        {% for prod in products  %}
+            <li>{{prod.name}}</li>
+        {% endfor %}
+    
+    </ol>
+
 </body>
 </html>
