--- a/Curs7/Ecommerce/shop/templates/all_products.html
+++ b/Curs7/Ecommerce/shop/templates/all_products.html
@@ -6,7 +6,19 @@
     <title>all_products</title>
 </head>
 <body>
-    <h1>all_products</h1>
+
+    <header>
+        <nav>
+            
+            <a href="{% url 'home_url'  %}">Home</a>
+            <a href="">Contact</a>
+            
+            <a href="{% url 'cart_url'  %}" >Cart</a>
+        </nav>
+    </header>
+
+
+    <h1>Home</h1>
     
     <ol>
   
