Extindere template-uri

--- a/Curs7/Ecommerce/shop/templates/all_products.html
+++ b/Curs7/Ecommerce/shop/templates/all_products.html
@@ -1,50 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>all_products</title>
-</head>
-<body>
 
-    <header>
-        <nav>
-            
-            <a href="{% url 'home_url'  %}">Home</a>
-            <a href="">Contact</a>
-            
-            <a href="{% url 'cart_url'  %}" >Cart</a>
-        </nav>
-    </header>
+{% extends "shop/base.html" %}
 
+     {% block main %}
+                        <h1>Home</h1>
+                        
+                        <ol>
+                    
+                        {% for prod in products  %}
+                            <li>
+                                <h2>{{prod.name}}</h2>
+                                <p>{{prod.description}}</p>
+                                
+                                <p>Pret: <b> {{prod.price}} lei </b></p>
 
-    <h1>Home</h1>
+                                {% if prod.image %}
+                                    <img src="{{prod.image.url}}" alt="">
+                                {% else %}
+                                        <p>Imaginea nu exista</p>
+                                {% endif %}
+
+                                
+                                <form action="{% url 'add_to_cart_url' prod.slug %}" method="post">
+                                    {% csrf_token %}
+                                    {{ form }}
+                                    <input type="submit" value="Add to Cart">
+                                </form>
+
+                            </li>
+                        {% endfor %}
+
+                        </ol>
+
     
-    <ol>
-  
-    {% for prod in products  %}
-        <li>
-            <h2>{{prod.name}}</h2>
-            <p>{{prod.description}}</p>
-            
-            <p>Pret: <b> {{prod.price}} lei </b></p>
-
-            {% if prod.image %}
-                   <img src="{{prod.image.url}}" alt="">
-            {% else %}
-                    <p>Imaginea nu exista</p>
-            {% endif %}
-
-            
-            <form action="{% url 'add_to_cart_url' prod.slug %}" method="post">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Add to Cart">
-            </form>
-
-        </li>
-    {% endfor %}
-
-      </ol>
-
-</html>
+    {% endblock main %}
