--- a/Curs7/Ecommerce/cart/templates/cart.html
+++ b/Curs7/Ecommerce/cart/templates/cart.html
@@ -1,30 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cart</title>
-</head>
-<body>
+{% extends "shop/base.html" %}
 
 
-    <header>
-        <nav>
-            
-            <a href="{% url 'home_url'  %}">Home</a>
-            <a href="">Contact</a>
-            
-            <a href="{% url 'cart_url'  %}" >Cart</a>
-        </nav>
-    </header>
-
+  {% block main %}
 
     <h1>cart</h1>
     <ol>
         {% for prod, quantity in  produse.items %}
             <li> {{prod}} - {{quantity}}</li>
-        {% endfor %}
-       
+        {% endfor %}   
     </ol>
-</body>
-</html>
+    
+
+{% endblock main %}
