--- a/Curs7/Ecommerce/shop/templates/all_categories.html
+++ b/Curs7/Ecommerce/shop/templates/all_categories.html
@@ -1,6 +1,11 @@
 {% extends "shop/base.html" %}
 
 
+    {% block title %}
+        Categories
+    {% endblock title %}
+
+
   {% block main %}
     
 
