--- a/Curs7/Ecommerce/shop/templates/all_products.html
+++ b/Curs7/Ecommerce/shop/templates/all_products.html
@@ -1,6 +1,11 @@
 
 {% extends "shop/base.html" %}
 
+
+    {% block title %}
+        Home
+    {% endblock title %}
+
      {% block main %}
                         <h1>Home</h1>
                         
