--- a/Curs7/Ecommerce/shop/templates/category_details.html
+++ b/Curs7/Ecommerce/shop/templates/category_details.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>category_details</title>
-</head>
-<body>
+{% extends "shop/base.html" %}
+
+
+    {% block title %}
+        Categories Details
+    {% endblock title %}
+
+
+  {% block main %}
 
     <h1>Categoria: {{category}} </h1>
     <ol>
@@ -15,5 +16,4 @@
     
     </ol>
 
-</body>
-</html>
+  {% endblock main %}
