--- a/Curs7/Ecommerce/shop/templates/shop/base.html
+++ b/Curs7/Ecommerce/shop/templates/shop/base.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>all_products</title>
+    <title>
+    {% block title %}
+    
+    {% endblock title %}
+    </title>
 </head>
 <body>
 
