--- a/Curs7/Ecommerce/shop/templates/shop/base.html
+++ b/Curs7/Ecommerce/shop/templates/shop/base.html
@@ -7,7 +7,27 @@
     {% block title %}
     
     {% endblock title %}
+ 
     </title>
+
+       <style>
+        nav a{
+            position: relative;
+        }
+        #cartcount {
+            position: absolute;
+            color:white;
+            top: -10px;
+            right: -10px;
+            aspect-ratio: 1/1;
+            width: 20px;
+            display:flex;
+            align-items:center;
+            justify-content: center;
+            background-color: red;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body>
 
@@ -19,7 +39,19 @@
 
             <a href="">Contact</a>
             
-            <a href="{% url 'cart_url'  %}" >Cart</a>
+            <a href="{% url 'cart_url'  %}" >
+            
+            
+            Cart 
+            {% if cart.products %}
+
+                <div id="cartcount">
+                       {{ cart.number_of_products }}
+                </div>
+             
+            {% endif %}
+            
+            </a>
         </nav>
     </header>
 
